fix dashboard overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -299,6 +299,7 @@ input[type="date"] {
 
 .main-container {
   padding: 0px;
+  overflow: hidden;
 }
 
 .container {
@@ -341,6 +342,7 @@ button {
 button:hover {
   background-color: #0056b3;
 }
+
 h1 {
   font-size: 2.5rem;
   color: #159a8e;
@@ -366,7 +368,7 @@ h3 svg {
 }
 
 p {
-  color: #159a8e;
+  color: white;
   font-size: 1rem;
 }
 
